Close RCA2 item for ipsec
+ Add endline at the end of each RCA file.

Ticket: VPP-1911 CSIT-1712

Change-Id: I4e06f93543c76ba4ac0a82b4379ee836b434705b
Signed-off-by: Vratko Polak <vrpolak@cisco.com>

--- a/resources/tools/presentation/rca/rca-3n-skx-2t1c-ndr-rca2.yaml
+++ b/resources/tools/presentation/rca/rca-3n-skx-2t1c-ndr-rca2.yaml
@@ -32,5 +32,6 @@ footnote: "[5] DONE, caused by setting MTU [VPP-1876], [CSIT-1705].
 
     [11] DONE, memif regression, CANDIDATE(S) confirmed ge-23801.
 
-    [12] WIP, ipsec tnl sw scale regression, CANDIDATE(S) ge-22878, [CSIT-1712].
+    [12] DONE, ipsec tnl sw scale regression, CANDIDATE(S) confirmed ge-22878,
+    [VPP-1911], [CSIT-1712].
 "
